# bcnode

./: COPYING  LICENSE  README.md
doc/: bcnode.conf
src/: CMakeLists.txt  bcnode.cpp  bcterminal.cpp  bctest.cpp
src/BTC/: blockIndex.h  btc.cpp  btc.h  connection.h  defaults.h  http.cpp  http.h  nativeApi.cpp  nativeApi.h  network.cpp  network.h  proto.cpp  proto.h  script.cpp  script.h  serialize.h  validation.h
src/DOGE/: connection.h  doge.cpp  doge.h  proto.cpp  proto.h  validation.cpp  validation.h
src/LTC/: ltc.cpp  ltc.h  proto.cpp  proto.h  script.h
src/XPM/: nativeApi.h  proto.cpp  proto.h  xpm.cpp  xpm.h
src/ZEC/: http.h  network.h  proto.cpp  proto.h  zec.cpp  zec.h
src/cmake/: Findlibp2p.cmake  Findmpir.cmake  ProjectConfig4cpp.cmake  ProjectLibp2p.cmake  ProjectMPIR.cmake  ProjectSecp256k1.cmake  TBBGet.cmake
src/cmake/secp256k1/: CMakeLists.txt
src/common/: arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bcnode.h  bigNum.cpp  bigNum.h  blockDataBase.cpp  blockDataBase.h  blockIndexCombiner.h  blockSource.cpp  blockSource.h  combiner.h  dcas.h  file.cpp  file.h  fopen.h  hostAddress.h  intrusive_ptr.h  linearDataStorage.cpp  linearDataStorage.h  merkleTree.cpp  merkleTree.h  mlog.h  rapidJsonHelper.h  serializeJson.h  serializeUtils.h  serializedDataCache.cpp  serializedDataCache.h  smallStream.h  spmc_unbounded_queue.h  thread.cpp  uint256.cpp  uint256.h  utils.cpp  utils.h  xvector.h
src/common/hashmap/spmc/: hashmap.h
src/common/mstorage/: dynamicBuffer.cpp  dynamicBuffer.h
src/crypto/: scrypt.c  sha256.c
src/db/: addrHistoryDb.cpp  addrHistoryDb.h  archive.cpp  archive.h  balancedb.cpp  balancedb.h  common.h  storage.cpp  storage.h  sync.cpp  sync.h  txdb.cpp  txdb.h  txdbRef.cpp  txdbRef.h  utxodb.cpp  utxodb.h
